Mon Oct  8 19:48:28 CDT 2001 Adam Heath <doogie@debian.org>

  * main/main.c: Make sure the integer passed to --result-fd is correct
    before manipulating the pointers(we checked after we manipulated
    previously)

Sun Oct  7 22:23:54 CDT 2001 Adam Heath <doogie@debian.org>

  * Makefile.in: Remove dulicate inclusion of utils in SUBDIRS.

Sun Oct  7 19:38:56 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: oops.  We weren't adding '\n' when printing
    out the reformated info text.
 
Sun Oct  7 05:00:02 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Don't print out the info entry every time we
    are called.

Sun Oct  7 03:12:35 CDT 2001 Adam Heath <doogie@debian.org>

  * debian/control: Several fixes:
    * dpkg-static needs the same set of Depends(and others) lines as dpkg.
    * Modify the dpkg-static description to note that it's a static
      compile.
    * Bump the conflicts on sysvinit to 2.82-1, as that is the version
      that actually has the proper replaces line.
  * debian/rules: dpkg-static was actually being built as dpkg.deb.

Thu Sep 20 17:06:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/rules: strip enoent as well

Sat Sep 15 20:19:57 CDT 2001 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Several fixes:
    * Move /usr/info/dir to /usr/share/info/dir.
    * Improve message when locking and /usr/share/info/dir doesn't exist.
    * Use /var/backups/infodir.bak if the above doesn't exist.
    * Allow for relative filenames, and add a --remove-exactly option.
    * Use section from the .info file if --section is not given.
    * Include current filename in error messages.
    * Format /usr/share/info/dir entries to uniform width.
    * --calign|--align|--maxwidth are now ignored.

Wed Sep 12 18:45:57 CDT 2001 Adam Heath <doogie@debian.org>

  Fixes for building of dpkg-static.deb.
    * Can't build both dpkg.deb and dpkg-static.deb in single run, because