@@ -1,3 +1,8 @@
+Mon Oct  8 19:51:36 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Turn setstatuspipe into a generic setpipe, in preparation
+    for --result-fd.
+
 Mon Oct  8 19:48:28 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c: Make sure the integer passed to --result-fd is correct
